--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -37,7 +37,7 @@
       {% endif %}
       {% if author.email %}
         <!-- <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</a></li> -->
-        <li><a href="mailto:{{ "lz2981@columbia.edu" }}"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</a></li>
+        <li><a href="mailto:{{ "lz2981@columbia.edu" }}"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ site.data.ui-text[site.locale].email_label | default: "lz2981@columbia.edu" }}</a></li>
         {% endif %}
 
       <!-- Font Awesome and Academicons icons / Academic websites -->
